<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <ImageView
                android:id="@+id/desc_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:layout_gravity="center"
                android:contentDescription="@string/holds_the_trailer_link_from_youtube"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_play"
               android:layout_centerInParent="true"
                android:contentDescription="@string/to_show_play_button_on_image" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/desc_name"
            android:text="@string/name_of_movie_web_series"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/desc_year"
            android:text="@string/year"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/audio"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/audio"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/desc_audio"
                android:text="@string/audio"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/desc_link"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:text="@string/link"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@android:color/black"/>
        <Button
            android:id="@+id/desc_damage_request"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:text="@string/link_not_found"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@android:color/black"/>
    </LinearLayout>
</ScrollView>